--- a/PT-Project.vcxproj
+++ b/PT-Project.vcxproj
@@ -136,6 +136,8 @@
     <ClCompile Include="Card.cpp" />
     <ClCompile Include="CardFour.cpp" />
     <ClCompile Include="CardOne.cpp" />
+    <ClCompile Include="CardSeven.cpp" />
+    <ClCompile Include="CardSix.cpp" />
     <ClCompile Include="CardThree.cpp" />
     <ClCompile Include="CardTwo.cpp" />
     <ClCompile Include="Cell.cpp" />
@@ -196,6 +198,8 @@
     <ClInclude Include="Card.h" />
     <ClInclude Include="CardFour.h" />
     <ClInclude Include="CardOne.h" />
+    <ClInclude Include="CardSeven.h" />
+    <ClInclude Include="CardSix.h" />
     <ClInclude Include="CardThree.h" />
     <ClInclude Include="CardTwo.h" />
     <ClInclude Include="Cell.h" />
