--- a/PT-Project.vcxproj.filters
+++ b/PT-Project.vcxproj.filters
@@ -25,7 +25,7 @@
     <Filter Include="GameObjects\Cards">
       <UniqueIdentifier>{28af86b7-026e-44cd-b907-8de0d89f27ee}</UniqueIdentifier>
     </Filter>
-    <Filter Include="GUIClasses">
+    <Filter Include="GameObjects\Cards\GUIClasses">
       <UniqueIdentifier>{03fd4e0d-92e0-4271-bb9b-d6e9f21ec35f}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
@@ -147,15 +147,9 @@
     <ClCompile Include="Action.cpp">
       <Filter>Actions</Filter>
     </ClCompile>
-    <ClCompile Include="GameObject.cpp">
-      <Filter>GameObjects</Filter>
-    </ClCompile>
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Card.cpp">
       <Filter>GameObjects\Cards</Filter>
-    </ClCompile>
-    <ClCompile Include="Ladder.cpp">
-      <Filter>GameObjects</Filter>
     </ClCompile>
     <ClCompile Include="AddLadderAction.cpp">
       <Filter>Actions</Filter>
@@ -176,19 +170,13 @@
       <Filter>Actions</Filter>
     </ClCompile>
     <ClCompile Include="CellPosition.cpp">
-      <Filter>GUIClasses</Filter>
+      <Filter>GameObjects\Cards\GUIClasses</Filter>
     </ClCompile>
     <ClCompile Include="Input.cpp">
-      <Filter>GUIClasses</Filter>
+      <Filter>GameObjects\Cards\GUIClasses</Filter>
     </ClCompile>
     <ClCompile Include="Output.cpp">
-      <Filter>GUIClasses</Filter>
-    </ClCompile>
-    <ClCompile Include="InputDiceValueAction.cpp">
-      <Filter>Actions</Filter>
-    </ClCompile>
-    <ClCompile Include="Snake.cpp">
-      <Filter>GameObjects</Filter>
+      <Filter>GameObjects\Cards\GUIClasses</Filter>
     </ClCompile>
     <ClCompile Include="AddSnakeAction.cpp">
       <Filter>Actions</Filter>
@@ -201,6 +189,24 @@
     </ClCompile>
     <ClCompile Include="CardFour.cpp">
       <Filter>GameObjects\Cards</Filter>
+    </ClCompile>
+    <ClCompile Include="InputDiceValueAction.cpp">
+      <Filter>GameObjects\Cards</Filter>
+    </ClCompile>
+    <ClCompile Include="CardSeven.cpp">
+      <Filter>GameObjects\Cards</Filter>
+    </ClCompile>
+    <ClCompile Include="CardSix.cpp">
+      <Filter>GameObjects\Cards</Filter>
+    </ClCompile>
+    <ClCompile Include="GameObject.cpp">
+      <Filter>GameObjects</Filter>
+    </ClCompile>
+    <ClCompile Include="Ladder.cpp">
+      <Filter>GameObjects</Filter>
+    </ClCompile>
+    <ClCompile Include="Snake.cpp">
+      <Filter>GameObjects</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -273,17 +279,11 @@
     <ClInclude Include="Action.h">
       <Filter>Actions</Filter>
     </ClInclude>
-    <ClInclude Include="GameObject.h">
-      <Filter>GameObjects</Filter>
-    </ClInclude>
     <ClInclude Include="Card.h">
       <Filter>GameObjects\Cards</Filter>
     </ClInclude>
     <ClInclude Include="CardOne.h">
       <Filter>GameObjects\Cards</Filter>
-    </ClInclude>
-    <ClInclude Include="Ladder.h">
-      <Filter>GameObjects</Filter>
     </ClInclude>
     <ClInclude Include="AddLadderAction.h">
       <Filter>Actions</Filter>
@@ -301,23 +301,20 @@
       <Filter>Actions</Filter>
     </ClInclude>
     <ClInclude Include="CellPosition.h">
-      <Filter>GUIClasses</Filter>
+      <Filter>GameObjects\Cards\GUIClasses</Filter>
     </ClInclude>
     <ClInclude Include="Input.h">
-      <Filter>GUIClasses</Filter>
+      <Filter>GameObjects\Cards\GUIClasses</Filter>
     </ClInclude>
     <ClInclude Include="Output.h">
-      <Filter>GUIClasses</Filter>
+      <Filter>GameObjects\Cards\GUIClasses</Filter>
     </ClInclude>
     <ClInclude Include="UI_Info.h">
-      <Filter>GUIClasses</Filter>
+      <Filter>GameObjects\Cards\GUIClasses</Filter>
     </ClInclude>
     <ClInclude Include="DEFS.h" />
     <ClInclude Include="InputDiceValueAction.h">
       <Filter>Actions</Filter>
-    </ClInclude>
-    <ClInclude Include="Snake.h">
-      <Filter>GameObjects</Filter>
     </ClInclude>
     <ClInclude Include="AddSnakeAction.h">
       <Filter>Actions</Filter>
@@ -330,6 +327,21 @@
     </ClInclude>
     <ClInclude Include="CardFour.h">
       <Filter>GameObjects\Cards</Filter>
+    </ClInclude>
+    <ClInclude Include="CardSeven.h">
+      <Filter>GameObjects\Cards</Filter>
+    </ClInclude>
+    <ClInclude Include="CardSix.h">
+      <Filter>GameObjects\Cards</Filter>
+    </ClInclude>
+    <ClInclude Include="GameObject.h">
+      <Filter>GameObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="Ladder.h">
+      <Filter>GameObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="Snake.h">
+      <Filter>GameObjects</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
