--- a/PT-Project.vcxproj
+++ b/PT-Project.vcxproj
@@ -134,11 +134,14 @@
     <ClCompile Include="AddSnakeAction.cpp" />
     <ClCompile Include="ApplicationManager.cpp" />
     <ClCompile Include="Card.cpp" />
+    <ClCompile Include="CardEleven.cpp" />
     <ClCompile Include="CardFive.cpp" />
     <ClCompile Include="CardFour.cpp" />
+    <ClCompile Include="CardNine.cpp" />
     <ClCompile Include="CardOne.cpp" />
     <ClCompile Include="CardSeven.cpp" />
     <ClCompile Include="CardSix.cpp" />
+    <ClCompile Include="CardTen.cpp" />
     <ClCompile Include="CardThree.cpp" />
     <ClCompile Include="CardTwo.cpp" />
     <ClCompile Include="Cell.cpp" />
@@ -197,11 +200,14 @@
     <ClInclude Include="AddSnakeAction.h" />
     <ClInclude Include="ApplicationManager.h" />
     <ClInclude Include="Card.h" />
+    <ClInclude Include="CardEleven.h" />
     <ClInclude Include="CardFive.h" />
     <ClInclude Include="CardFour.h" />
+    <ClInclude Include="CardNine.h" />
     <ClInclude Include="CardOne.h" />
     <ClInclude Include="CardSeven.h" />
     <ClInclude Include="CardSix.h" />
+    <ClInclude Include="CardTen.h" />
     <ClInclude Include="CardThree.h" />
     <ClInclude Include="CardTwo.h" />
     <ClInclude Include="Cell.h" />
