--- a/PT-Project.vcxproj.filters
+++ b/PT-Project.vcxproj.filters
@@ -25,7 +25,7 @@
     <Filter Include="GameObjects\Cards">
       <UniqueIdentifier>{28af86b7-026e-44cd-b907-8de0d89f27ee}</UniqueIdentifier>
     </Filter>
-    <Filter Include="GameObjects\Cards\GUIClasses">
+    <Filter Include="GUIClasses">
       <UniqueIdentifier>{03fd4e0d-92e0-4271-bb9b-d6e9f21ec35f}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
@@ -170,13 +170,13 @@
       <Filter>Actions</Filter>
     </ClCompile>
     <ClCompile Include="CellPosition.cpp">
-      <Filter>GameObjects\Cards\GUIClasses</Filter>
+      <Filter>GUIClasses</Filter>
     </ClCompile>
     <ClCompile Include="Input.cpp">
-      <Filter>GameObjects\Cards\GUIClasses</Filter>
+      <Filter>GUIClasses</Filter>
     </ClCompile>
     <ClCompile Include="Output.cpp">
-      <Filter>GameObjects\Cards\GUIClasses</Filter>
+      <Filter>GUIClasses</Filter>
     </ClCompile>
     <ClCompile Include="AddSnakeAction.cpp">
       <Filter>Actions</Filter>
@@ -210,6 +210,15 @@
     </ClCompile>
     <ClCompile Include="InputDiceValueAction.cpp">
       <Filter>Actions</Filter>
+    </ClCompile>
+    <ClCompile Include="CardNine.cpp">
+      <Filter>GameObjects\Cards</Filter>
+    </ClCompile>
+    <ClCompile Include="CardTen.cpp">
+      <Filter>GameObjects\Cards</Filter>
+    </ClCompile>
+    <ClCompile Include="CardEleven.cpp">
+      <Filter>GameObjects\Cards</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -304,16 +313,16 @@
       <Filter>Actions</Filter>
     </ClInclude>
     <ClInclude Include="CellPosition.h">
-      <Filter>GameObjects\Cards\GUIClasses</Filter>
+      <Filter>GUIClasses</Filter>
     </ClInclude>
     <ClInclude Include="Input.h">
-      <Filter>GameObjects\Cards\GUIClasses</Filter>
+      <Filter>GUIClasses</Filter>
     </ClInclude>
     <ClInclude Include="Output.h">
-      <Filter>GameObjects\Cards\GUIClasses</Filter>
+      <Filter>GUIClasses</Filter>
     </ClInclude>
     <ClInclude Include="UI_Info.h">
-      <Filter>GameObjects\Cards\GUIClasses</Filter>
+      <Filter>GUIClasses</Filter>
     </ClInclude>
     <ClInclude Include="DEFS.h" />
     <ClInclude Include="InputDiceValueAction.h">
@@ -323,9 +332,6 @@
       <Filter>Actions</Filter>
     </ClInclude>
     <ClInclude Include="CardTwo.h">
-      <Filter>GameObjects\Cards</Filter>
-    </ClInclude>
-    <ClInclude Include="CardThree.h">
       <Filter>GameObjects\Cards</Filter>
     </ClInclude>
     <ClInclude Include="CardFour.h">
@@ -347,6 +353,18 @@
       <Filter>GameObjects</Filter>
     </ClInclude>
     <ClInclude Include="CardFive.h">
+      <Filter>GameObjects\Cards</Filter>
+    </ClInclude>
+    <ClInclude Include="CardNine.h">
+      <Filter>GameObjects\Cards</Filter>
+    </ClInclude>
+    <ClInclude Include="CardThree.h">
+      <Filter>GameObjects\Cards</Filter>
+    </ClInclude>
+    <ClInclude Include="CardTen.h">
+      <Filter>GameObjects\Cards</Filter>
+    </ClInclude>
+    <ClInclude Include="CardEleven.h">
       <Filter>GameObjects\Cards</Filter>
     </ClInclude>
   </ItemGroup>
