--- a/PT-Project.vcxproj.filters
+++ b/PT-Project.vcxproj.filters
@@ -220,6 +220,7 @@
     <ClCompile Include="CardEleven.cpp">
       <Filter>GameObjects\Cards</Filter>
     </ClCompile>
+    <ClCompile Include="CopyCardAction.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CMUgraphicsLib\auxil.h">
@@ -367,5 +368,6 @@
     <ClInclude Include="CardEleven.h">
       <Filter>GameObjects\Cards</Filter>
     </ClInclude>
+    <ClInclude Include="CopyCardAction.h" />
   </ItemGroup>
 </Project>
