--- a/PT-Project.vcxproj
+++ b/PT-Project.vcxproj
@@ -134,6 +134,7 @@
     <ClCompile Include="AddSnakeAction.cpp" />
     <ClCompile Include="ApplicationManager.cpp" />
     <ClCompile Include="Card.cpp" />
+    <ClCompile Include="CardEight.cpp" />
     <ClCompile Include="CardEleven.cpp" />
     <ClCompile Include="CardFive.cpp" />
     <ClCompile Include="CardFour.cpp" />
@@ -143,6 +144,7 @@
     <ClCompile Include="CardSix.cpp" />
     <ClCompile Include="CardTen.cpp" />
     <ClCompile Include="CardThree.cpp" />
+    <ClCompile Include="CardTwelve.cpp" />
     <ClCompile Include="CardTwo.cpp" />
     <ClCompile Include="Cell.cpp" />
     <ClCompile Include="CellPosition.cpp" />
@@ -200,6 +202,7 @@
     <ClInclude Include="AddSnakeAction.h" />
     <ClInclude Include="ApplicationManager.h" />
     <ClInclude Include="Card.h" />
+    <ClInclude Include="CardEight.h" />
     <ClInclude Include="CardEleven.h" />
     <ClInclude Include="CardFive.h" />
     <ClInclude Include="CardFour.h" />
@@ -209,6 +212,7 @@
     <ClInclude Include="CardSix.h" />
     <ClInclude Include="CardTen.h" />
     <ClInclude Include="CardThree.h" />
+    <ClInclude Include="CardTwelve.h" />
     <ClInclude Include="CardTwo.h" />
     <ClInclude Include="Cell.h" />
     <ClInclude Include="CellPosition.h" />
