--- a/PT-Project.vcxproj.filters
+++ b/PT-Project.vcxproj.filters
@@ -229,6 +229,14 @@
     <ClCompile Include="PasteCardAction.cpp">
       <Filter>Actions</Filter>
     </ClCompile>
+    <ClCompile Include="CardEight.cpp" />
+    <ClCompile Include="CardTwelve.cpp" />
+    <ClCompile Include="SaveGridAction.cpp">
+      <Filter>Actions</Filter>
+    </ClCompile>
+    <ClCompile Include="DeleteGameObject.cpp">
+      <Filter>Actions</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CMUgraphicsLib\auxil.h">
@@ -383,6 +391,14 @@
       <Filter>Actions</Filter>
     </ClInclude>
     <ClInclude Include="PasteCardAction.h">
+      <Filter>Actions</Filter>
+    </ClInclude>
+    <ClInclude Include="CardEight.h" />
+    <ClInclude Include="CardTwelve.h" />
+    <ClInclude Include="SaveGridAction.h">
+      <Filter>Actions</Filter>
+    </ClInclude>
+    <ClInclude Include="DeleteGameObject.h">
       <Filter>Actions</Filter>
     </ClInclude>
   </ItemGroup>
