--- a/PT-Project.vcxproj
+++ b/PT-Project.vcxproj
@@ -192,6 +192,7 @@
     <ClCompile Include="Input.cpp" />
     <ClCompile Include="InputDiceValueAction.cpp" />
     <ClCompile Include="Ladder.cpp" />
+    <ClCompile Include="NewGameAction.cpp" />
     <ClCompile Include="OpenAction.cpp" />
     <ClCompile Include="Output.cpp" />
     <ClCompile Include="PasteCardAction.cpp" />
@@ -251,6 +252,7 @@
     <ClInclude Include="Input.h" />
     <ClInclude Include="InputDiceValueAction.h" />
     <ClInclude Include="Ladder.h" />
+    <ClInclude Include="NewGameAction.h" />
     <ClInclude Include="OpenAction.h" />
     <ClInclude Include="Output.h" />
     <ClInclude Include="PasteCardAction.h" />
