--- a/PT-Project.vcxproj.filters
+++ b/PT-Project.vcxproj.filters
@@ -244,6 +244,9 @@
     <ClCompile Include="OpenAction.cpp">
       <Filter>Actions</Filter>
     </ClCompile>
+    <ClCompile Include="NewGameAction.cpp">
+      <Filter>Actions</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CMUgraphicsLib\auxil.h">
@@ -413,6 +416,9 @@
       <Filter>Actions</Filter>
     </ClInclude>
     <ClInclude Include="OpenAction.h">
+      <Filter>Actions</Filter>
+    </ClInclude>
+    <ClInclude Include="NewGameAction.h">
       <Filter>Actions</Filter>
     </ClInclude>
   </ItemGroup>
